--- a/your-code/pandas_1_concat-merge-join.ipynb
+++ b/your-code/pandas_1_concat-merge-join.ipynb
@@ -45,7 +45,33 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    A   B   C\n",
+      "0  a0  b0  c0\n",
+      "1  a1  b1  c1\n",
+      "2  a2  b2  c2 \n",
+      "---\n",
+      "     A   B   C\n",
+      "3  a3  b3  c3\n",
+      "4  a4  b4  c4\n",
+      "5  a5  b5  c5 \n",
+      "---\n",
+      "     D   E   F\n",
+      "0  d0  e0  f0\n",
+      "1  d1  e1  f1\n",
+      "2  d2  e2  f2 \n",
+      "---\n",
+      "     D   E   F\n",
+      "3  d3  e3  f3\n",
+      "4  d4  e4  f4\n",
+      "5  d5  e5  f5\n"
+     ]
+    }
+   ],
    "source": [
     "df1 = pd.DataFrame({'A': ['a'+str(x) for x in range(3)],\n",
     "                    'B': ['b'+str(x) for x in range(3)],\n",
@@ -67,7 +93,7 @@
     "                    'F': ['f'+str(x) for x in range(3, 6)]},\n",
     "                     index=[3, 4, 5]) \n",
     "\n",
-    "# print(df1, '\\n---\\n', df2, '\\n---\\n', df3, '\\n---\\n',df4)"
+    "print(df1, '\\n---\\n', df2, '\\n---\\n', df3, '\\n---\\n',df4)"
    ]
   },
   {
@@ -81,9 +107,40 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "df1 and df2:\n",
+      "     A   B   C\n",
+      "0  a0  b0  c0\n",
+      "1  a1  b1  c1\n",
+      "2  a2  b2  c2\n",
+      "3  a3  b3  c3\n",
+      "4  a4  b4  c4\n",
+      "5  a5  b5  c5\n",
+      "\n",
+      "df3 and df4:\n",
+      "     D   E   F\n",
+      "0  d0  e0  f0\n",
+      "1  d1  e1  f1\n",
+      "2  d2  e2  f2\n",
+      "3  d3  e3  f3\n",
+      "4  d4  e4  f4\n",
+      "5  d5  e5  f5\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# Concatenating df1 and df2\n",
+    "df1_df2_concated = pd.concat([df1, df2])\n",
+    "\n",
+    "# Concatenating df3 and df4\n",
+    "df3_df4_concated = pd.concat([df3, df4])\n",
+    "\n",
+    "print(\"df1 and df2:\\n\", df1_df2_concated)\n",
+    "print(\"\\ndf3 and df4:\\n\", df3_df4_concated)"
    ]
   },
   {
@@ -101,9 +158,32 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "all the dataframes concatenated:\n",
+      "      A    B    C    D    E    F\n",
+      "0   a0   b0   c0  NaN  NaN  NaN\n",
+      "1   a1   b1   c1  NaN  NaN  NaN\n",
+      "2   a2   b2   c2  NaN  NaN  NaN\n",
+      "3   a3   b3   c3  NaN  NaN  NaN\n",
+      "4   a4   b4   c4  NaN  NaN  NaN\n",
+      "5   a5   b5   c5  NaN  NaN  NaN\n",
+      "0  NaN  NaN  NaN   d0   e0   f0\n",
+      "1  NaN  NaN  NaN   d1   e1   f1\n",
+      "2  NaN  NaN  NaN   d2   e2   f2\n",
+      "3  NaN  NaN  NaN   d3   e3   f3\n",
+      "4  NaN  NaN  NaN   d4   e4   f4\n",
+      "5  NaN  NaN  NaN   d5   e5   f5\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "all_df = pd.concat([df1, df2, df3, df4], sort=False)\n",
+    "\n",
+    "print(\"all the dataframes concatenated:\\n\", all_df)"
    ]
   },
   {
@@ -124,9 +204,46 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Same above but with adjusting ignore_index=True:\n",
+      "       A    B    C    D    E    F\n",
+      "0    a0   b0   c0  NaN  NaN  NaN\n",
+      "1    a1   b1   c1  NaN  NaN  NaN\n",
+      "2    a2   b2   c2  NaN  NaN  NaN\n",
+      "3    a3   b3   c3  NaN  NaN  NaN\n",
+      "4    a4   b4   c4  NaN  NaN  NaN\n",
+      "5    a5   b5   c5  NaN  NaN  NaN\n",
+      "6   NaN  NaN  NaN   d0   e0   f0\n",
+      "7   NaN  NaN  NaN   d1   e1   f1\n",
+      "8   NaN  NaN  NaN   d2   e2   f2\n",
+      "9   NaN  NaN  NaN   d3   e3   f3\n",
+      "10  NaN  NaN  NaN   d4   e4   f4\n",
+      "11  NaN  NaN  NaN   d5   e5   f5\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_df_with_ignore_index = pd.concat([df1, df2, df3, df4], sort=False, ignore_index=True)\n",
+    "\n",
+    "print(\"Same above but with adjusting ignore_index=True:\\n\", all_df_with_ignore_index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "''' \n",
+    "How is the output different (adjusting ignore_index=True:)?\n",
+    "1.New sequential indexes\n",
+    "2.Column stays the same\n",
+    "3.Row continuity\n",
+    "'''"
    ]
   },
   {
@@ -166,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +342,7 @@
        "2  i2  a2  b2"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +412,7 @@
        "2  i3  c3  d3"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,11 +437,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Using join():\n",
+      "       A   B   C   D\n",
+      "idx                \n",
+      "i1   a1  b1  c1  d1\n",
+      "i2   a2  b2  c2  d2\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# Set 'idx' as the index\n",
+    "left.set_index('idx', inplace=True)\n",
+    "right.set_index('idx', inplace=True)\n",
+    "\n",
+    "# Join\n",
+    "join_df = left.join(right, how='inner')\n",
+    "\n",
+    "# Display \n",
+    "print(\"\\nUsing join():\\n\", join_df)"
    ]
   },
   {
@@ -364,11 +502,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    A   B   C   D   E   F\n",
+      "0  a0  b0  c0  d0  e0  f0\n",
+      "1  a1  b1  c1  d1  e1  f1\n",
+      "2  a2  b2  c2  d2  e2  f2\n",
+      "3  a3  b3  c3  d3  e3  f3\n",
+      "4  a4  b4  c4  d4  e4  f4\n",
+      "5  a5  b5  c5  d5  e5  f5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Concatenating\n",
+    "df_1_2 = pd.concat([df1, df2])\n",
+    "\n",
+    "#Concatenating\n",
+    "df_3_4 = pd.concat([df3, df4])\n",
+    "\n",
+    "# Joining based on index\n",
+    "df_final = df_1_2.join(df_3_4)\n",
+    "\n",
+    "# Display the final DataFrame\n",
+    "print(df_final)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "''' after comparing my result with the sample picture \n",
+    "it looks alike meaning we only have to concatenate and join'''"
    ]
   }
  ],
@@ -388,7 +560,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.2"
   },
   "toc": {
    "base_numbering": 1,
@@ -405,5 +577,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
