--- a/your-code/pandas_1_concat-merge-join.ipynb
+++ b/your-code/pandas_1_concat-merge-join.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        "2  i2  a2  b2"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
        "2  i3  c3  d3"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -446,10 +446,11 @@
      "text": [
       "\n",
       "Using join():\n",
-      "       A   B   C   D\n",
-      "idx                \n",
-      "i1   a1  b1  c1  d1\n",
-      "i2   a2  b2  c2  d2\n"
+      "       A   B    C    D\n",
+      "idx                  \n",
+      "i0   a0  b0  NaN  NaN\n",
+      "i1   a1  b1   c1   d1\n",
+      "i2   a2  b2   c2   d2\n"
      ]
     }
    ],
@@ -459,7 +460,7 @@
     "right.set_index('idx', inplace=True)\n",
     "\n",
     "# Join\n",
-    "join_df = left.join(right, how='inner')\n",
+    "join_df = left.join(right, rsuffix='_right')\n",
     "\n",
     "# Display \n",
     "print(\"\\nUsing join():\\n\", join_df)"
